# zelll

./: .gitignore  CITATION.cff  Cargo.toml  README.md  zelll.bibtex
.github/workflows/: python-docs.yml  release-pypi.yml
benches/: cellgrid.rs  iters.rs  lj.rs  simd.rs
examples/: beads.rs  boids.rs  borbs.rs  cachemisses.rs  lammps_data.rs  minimal.rs  minimal_new.rs  par_borbs.rs
interzelllar/: Cargo.toml  README.md
interzelllar/src/: io.rs  sdf.rs  surface.rs
more_benches/: Manifest.toml  Project.toml  celllistmap.jl  in.zelllbench.txt
python/: Cargo.toml  README.md  pyproject.toml
python/examples/: psssh.py  requirements.txt
python/pdoc/templates/: module.html.jinja2
python/src/: lib.rs
scripts/: cachemisses.sh  more_benches.sh
src/: cellgrid.rs  lib.rs  scratch.rs
src/cellgrid/: flatindex.rs  iters.rs  multiindex.rs  neighbors.rs  storage.rs  util.rs
surface-sampling/: Cargo.toml  README.md
surface-sampling/examples/: cli.rs
surface-sampling/scripts/: sdf_queries.sh
surface-sampling/src/: atom.rs  io.rs  lib.rs  sdf.rs  surface.rs
surface-sampling/src/sdf/: enzyme.rs  numdual.rs
