[package]
name = "zelll"
authors = ["Vincent Messow <vincent.messow@uni-jena.de>"]
repository = "https://github.com/microscopic-image-analysis/zelll"
readme = "README.md"
license = "MIT"
description = "tbd."
include = ["src/*", "Cargo.toml", "README.md", "COPYING"]
keywords = []
categories = ["science"]
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10"
nalgebra = "0.32"
hashbrown = "0.14"
rayon = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.5"
kiss3d = "0.35"
rand = "0.8"
soa_derive = "0.12"
dashmap = "5.4"

[features]
default = []
rayon = ["dep:rayon", "hashbrown/rayon"]

[[bench]]
name = "cellgrid"
harness = false

[profile.bench]
opt-level = 3
overflow-checks = false
lto = true

[profile.release]
opt-level = 3
#makes profiling difficult
#overflow-checks = true
lto = true