[workspace]
members = ["surface-sampling", "python"]

[workspace.package]
authors = ["Vincent Messow <vincent.messow@uni-jena.de>"]
repository = "https://github.com/microscopic-image-analysis/zelll"
license = "MIT"
keywords = ["coarse-grained", "molecular-dynamics", "particle", "simulation", "pairwise", "interactions", "cell-lists"]
categories = ["science", "simulation"]
version = "0.1.0"
edition = "2024"

[package]
name = "zelll"
authors.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
description = "a Rust implementation of the cell lists algorithm."
include = ["src/*", "Cargo.toml", "README.md", "COPYING"]
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
itertools = "0.14"
nalgebra = "0.33"
hashbrown = "0.15"
num-traits = "0.2"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = "0.5"
kiss3d = "0.35"
rand = "0.8"
soa_derive = "0.13"
dashmap = "5.5"
crabgrind = "0.1.12"

[features]
default = []
rayon = ["dep:rayon", "hashbrown/rayon"]

[[bench]]
name = "cellgrid"
harness = false

# [[bench]]
# name = "hashmap"
# harness = false

# [[bench]]
# name = "simd"
# harness = false

[profile.bench]
opt-level = 3
overflow-checks = false
lto = true

[profile.release]
opt-level = 3
#makes profiling difficult
#overflow-checks = true
lto = true