[package]
name = "python-zelll"
authors.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true
description = "tbd."
#include = ["src/*", "Cargo.toml", "README.md", "COPYING"]
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true

[lib]
name = "zelll"
crate-type = ["cdylib"]

[dependencies]
bincode = { version = "2.0", features = ["serde"] }
pyo3 = "0.26"
zelll = { path  = "..", features = ["serde"] }
serde = { version = "1.0" }